Test out new Gradle toolchains feature. (#1)
* Test out new gradle toolchains feature.

* Target JDK 15 by default.