@@ -3,12 +3,9 @@ plugins {
   id 'maven-publish'
   id "com.jfrog.bintray"
   id "pl.allegro.tech.build.axion-release"
-  id "org.javamodularity.moduleplugin"
   id "me.champeau.gradle.jmh"
   id "io.morethan.jmhreport"
 }
-
-sourceCompatibility = JavaVersion.toVersion(project.findProperty('targetJava') ?: JavaVersion.VERSION_14)
 
 scmVersion {
   tag.prefix = ''
@@ -27,28 +24,10 @@ ext {
   bench = project.properties['bench'] ?: 'BenchCharFieldStyles'
 }
 
-// https://docs.gradle.org/5.6.2/userguide/building_java_projects.html#sec:java_cross_compilation
-def javaHomePath = new File("${project.findProperty('javaHome') ?: System.getenv('JAVA_HOME')}")
-def javaExecutables = [:].withDefault { execName ->
-  def executable = new File(javaHomePath, "bin/${execName}")
-  assert executable.exists(): "There is no ${execName} executable in ${javaHomePath}/bin"
-  executable
-}
-
-tasks.withType(AbstractCompile) {
-  options.with {
-    fork = true
-    forkOptions.javaHome = javaHomePath
+java {
+  toolchain {
+    languageVersion = JavaLanguageVersion.of(project.findProperty('targetJava') as Integer ?: 15)
   }
-}
-tasks.withType(Javadoc) {
-  executable = javaExecutables.javadoc
-}
-tasks.withType(Test) {
-  executable = javaExecutables.java
-}
-tasks.withType(JavaExec) {
-  executable = javaExecutables.java
 }
 
 //github {
@@ -78,8 +57,6 @@ dependencies {
 
 jmh {
   // ./gradlew -q --console=plain --no-daemon jmh -Pbench=BenchStringFieldStyles
-  jvm = javaHomePath // Custom JVM to use when forking.
-  jvmArgsPrepend = ['-XX:+AlwaysPreTouch', '-XX:-UseBiasedLocking', '-XX:+DisableExplicitGC', '-XX:+UseNUMA', '-XX:+UnlockExperimentalVMOptions', '-XX:+UseZGC']
   resultsFile = project.parent.file("benchmark-results/$bench/jmh_report/results.json")
   warmupIterations = 3
   warmup = '4s'
@@ -114,18 +91,7 @@ sourceSets {
   }
 }
 
-compileTestJava {
-  moduleOptions {
-    addModules = ['org.junit.jupiter.params', 'jmh.core']
-    addReads = [
-        'systems.comodal.json_iterator': 'org.junit.jupiter.params,jmh.core']
-  }
-}
-
 test {
-  moduleOptions {
-    runOnClasspath = true
-  }
   useJUnitPlatform()
   maxParallelForks = 4
   testLogging {
